z-index fix (#169)

--- a/src/scss/styles-1-large-main.scss
+++ b/src/scss/styles-1-large-main.scss
@@ -219,7 +219,7 @@ nav {
 #menu-container {
   position: fixed;
   background-color: $palegrey;
-  z-index: 100;
+  z-index: 1000;
   width: 90%;
   max-width: 16rem;
   padding: 0 2rem 2rem 2rem;
